--- a/style.css
+++ b/style.css
@@ -75,5 +75,16 @@ body,html{
     flex-direction: column;
     border-radius: 1rem;
     box-shadow: 3px 3px 1px;
+    transform:  scale(0.5);   
+    opacity: 0; 
+    top: -200%;
+    transition: opacity 300ms ease-in-out, top 1000ms ease-in-out, transform 1000ms ease-in-out;
+}
+
+.modal__wrapper.active{ 
+    opacity: 1;
+    top: 50%;
+    transform: scale(1);
+    transition:  300ms cubic-bezier(0.165, 0.84, 0.44, 1);
 
 }
